[tool.poetry]
name = "pdf-creator"
version = "0.1.0"
description = ""
authors = ["digrimes <dillon.grimes@gmail.com>"]

[tool.poetry.dependencies]
python = "3.11.3"
Flask = "^2.3.1"
pdfkit = "^1.0.0"
gunicorn = "^20.1.0"
redis = "^4.5.4"
rq = "^1.13.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
