[tool.poetry]
name = "pdf-creator"
version = "0.1.0"
description = ""
authors = ["digrimes <dillon.grimes@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.2"
Flask = "^2.3.1"
gunicorn = "^20.1.0"
redis = "^4.5.4"
weasyprint = "^58.1"
boto3 = "^1.26.123"
python-dotenv = "^1.0.0"
pytz = "^2023.3"
cssselect = "0.9.1"
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
